# noir-mllib

./: .gitignore  Cargo.toml  README.md  benchmark.ipynb  benchmark.md  benchmark_nn.md  neural_network.ipynb  swap.py
LinearRegression/: linear_regression-static.rs  linear_regression.rs
benchmark/: benchmark.md
benchmark/notebook/: benchmark.ipynb  neural_network.ipynb
linear_reg/: Cargo.toml  data.csv  housing_numeric.csv  kmeans_data.csv  text_data.csv  wine_color.csv
linear_reg/src/: adam_group_by.rs  adam_linear_regression.rs  adam_regression.rs  basic_stat.rs  lasso_regression.rs  linear_reg.rs  linear_regression.rs  linear_regression_api.rs  main.rs  sample.rs  sgd_api.rs  sgd_linear_regression.rs  sgd_regression.rs
linear_regression/: linear_regression.rs
naive_bayes/: naive_bayes.rs
src/: activations.rs  adam_regressor.rs  basic_stat.rs  dense_layer.rs  lib.rs  losses.rs  matrix_utils.rs  mod.rs  nn_activations.rs  nn_dense_layer.rs  nn_losses.rs  nn_optimizers.rs  nn_prelude.rs  nn_utils.rs  ols_regressor.rs  prelude.rs  sample.rs  sgd_regressor.rs
