[package]
name = "noir_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
mimalloc = "0.1.34"
noir = { git = "https://github.com/deib-polimi/noir.git", version = "0.1.0" }
rand = "0.8.5"
serde = "1.0.159"
nalgebra = "0.32.2"
ndarray = { version = "0.14", features = ["serde"] }
regex = "1.8.1"
ndarray-linalg = { version = "0.13", features = ["openblas-static"]}
ordered-float = "3.7.0"
itertools = "0.10.5"
